# RAG-Agent

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/agent/: README.md  __init__.py  base.py  context.py  state_machine.py
backend/agent/prompts/: __init__.py  respond.py
backend/agent/tools/: __init__.py  base.py  clarify.py  intent.py  memory.py  query_rewrite.py  rerank.py  respond.py  retrieve.py  vision.py  web_search.py
backend/app/: README.md  __init__.py  __main__.py  main.py
backend/app/api/: __init__.py  admin.py  auth.py  chat.py  health.py  memory.py  merchant.py  products.py  upload.py
backend/app/core/: __init__.py  cli.py  logging.py  mode.py  redis_client.py  sms_service.py
backend/app/middleware/: __init__.py  logging.py  trace.py
backend/app/workers/: __init__.py  celery_app.py  tasks.py
backend/config/: README.md  __init__.py  settings.py
backend/db/: README.md  __init__.py  session.py
backend/db/migrations/: env.py
backend/db/models/: __init__.py  conversation.py  memory.py  product.py  submission.py  user.py
backend/docker/: README.md  docker-compose.yml
backend/providers/: README.md  __init__.py
backend/rag/: README.md  __init__.py  milvus_client.py  types.py
backend/schemas/: README.md  __init__.py  agent.py  auth.py  chat.py  common.py  health.py  merchant.py  product.py  upload.py
backend/scripts/: README.md  __init__.py  build_index.py  download_models.py  eval.py  seed_admin.py  seed_data.py  test_image_search.py  test_models.py
backend/tests/: __init__.py  test_state_machine.py
(+95 files in other folders)
