[project]
name = "rag-agent"
version = "0.1.0"
description = "Multimodal RAG E-commerce Shopping Agent (ByteDance 2026 AI Full-Stack Challenge)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.0",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0",
    "pymilvus>=2.4.0",
    "redis>=5.1.0",
    "httpx>=0.27.0",
    "openai>=1.50.0",
    "sse-starlette>=2.1.0",
    "loguru>=0.7.0",
    "python-multipart>=0.0.12",
    "pillow>=10.4.0",
    "celery>=5.4.0",
    "rank-bm25>=0.2.2",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.2.0",
    "python-jose[cryptography]>=3.3.0",
    "minio>=7.2.0",
    "email-validator>=2.2.0",
]

[project.optional-dependencies]
embedding-local = [
    "sentence-transformers>=3.1.0",
    "FlagEmbedding>=1.3.0",
    # 锁定 transformers 4.x 和 hub 0.x 避免与 hf-mirror 不兼容(新版 resolve-cache 接口镜像不支持)
    "transformers>=4.45,<5.0",
    "huggingface_hub>=0.25,<1.0",
    "torch>=2.4.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# 显式声明哪些目录是 Python 包,避免 setuptools 报 "multiple top-level packages"
[tool.setuptools]
packages = ["app", "agent", "config", "db", "providers", "rag", "schemas", "scripts"]
